updated logic for wrong answer and minor ui changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -379,7 +379,7 @@ body {
 }
 
 .secondary-button {
-  background-color: #dc3545;
+  background-color: #d0801e;
   color: white;
   border-radius: 5px;
 }
